<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetail">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg_shape_bottom"
        android:backgroundTint="#0D1345"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:background="@drawable/bg_shape_bottom"
            android:backgroundTint="#192A70" />

        <ImageView
            android:id="@+id/img_player"
            android:layout_width="220dp"
            android:layout_height="280dp"
            android:layout_alignRight="@id/view1"
            android:layout_alignBottom="@id/view1"
            android:layout_marginRight="16dp"
            tools:background="@drawable/kepa" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/mbold"
            android:textColor="#ffffff"
            android:textSize="17dp"
            tools:text="@string/detail_name" />

        <RelativeLayout
            android:id="@+id/box_position"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignStart="@id/player_name"
            android:layout_alignTop="@id/player_name"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_shape_custom"
            android:backgroundTint="#172664">

            <TextView
                android:id="@+id/label_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mbold"
                android:text="@string/position"
                android:textColor="#A8ACCE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/player_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_position"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mbold"
                tools:text="@string/detail_position"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/box_age"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@id/box_position"
            android:layout_alignTop="@id/player_name"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_shape_custom"
            android:backgroundTint="#172664">

            <TextView
                android:id="@+id/label_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mbold"
                android:text="@string/age"
                android:textColor="#A8ACCE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/player_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_age"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mbold"
                tools:text="@string/detail_age"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/box_height"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@id/box_position"
            android:layout_alignTop="@id/box_position"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_shape_custom"
            android:backgroundTint="#172664">

            <TextView
                android:id="@+id/label_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mbold"
                android:text="@string/height"
                android:textColor="#A8ACCE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/playerHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_height"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mbold"
                tools:text="@string/detail_height"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/box_weight"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@id/box_height"
            android:layout_alignTop="@id/box_age"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_shape_custom"
            android:backgroundTint="#172664">

            <TextView
                android:id="@+id/label_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mbold"
                android:text="@string/weight"
                android:textColor="#A8ACCE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/playerWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_weight"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mbold"
                tools:text="@string/detail_weight"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/box_number"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignRight="@id/view1"
            android:layout_alignBottom="@id/view1"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_shape_custom"
            android:backgroundTint="#ffffff"
            android:gravity="center">

            <TextView
                android:id="@+id/number_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mbold"
                tools:text="@string/detail_number"
                android:textColor="@color/colorDetail"
                android:textSize="24sp" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mbold"
            android:text="@string/label_bio"
            android:textColor="@android:color/white"
            android:textSize="17dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/player_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/mmedium"
                android:textColor="@android:color/black"
                tools:text="@string/player_bio" />


        </ScrollView>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>